fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ footer {
     margin: 0 auto;
     padding: 0px;
   }
+
+  ul {
+    margin: 0;
+  }
   /* .navbar li {
     text-align: center;
   }
@@ -278,6 +282,10 @@ footer {
     background-color: white;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .hero_text {
